Simplify writing of the repo config in CachedRefRepositoryTest
Also reformat with GJF 1.24

Change-Id: I6801d2aa61ed7994a20b66b2a73e9a65d2c4d5c2